Ajustes pós-validação do cliente 29/10/2019
