# src/api/to_de_taxi/models.ts
@@ -4,6 +4,9 @@ export { Notification } from './models/notification';
 export { ResponseGuid } from './models/response-guid';
 export { ResponseBoolean } from './models/response-boolean';
 export { ResponseCorridaSummary } from './models/response-corrida-summary';
+export { ResponseIEnumerableCorVeiculoSummary } from './models/response-ienumerable-cor-veiculo-summary';
+export { CorVeiculoSummary } from './models/cor-veiculo-summary';
+export { ResponseCorVeiculoSummary } from './models/response-cor-veiculo-summary';
 export { ResponseIEnumerableEnderecoSummary } from './models/response-ienumerable-endereco-summary';
 export { EnderecoSummary } from './models/endereco-summary';
 export { ResponseEnderecoSummary } from './models/response-endereco-summary';
@@ -49,6 +52,7 @@ export { SolicitacaoCorridaSummary } from './models/solicitacao-corrida-summary'
 export { ResponseSolicitacaoCorridaSummary } from './models/response-solicitacao-corrida-summary';
 export { ResponseIEnumerableTarifaSummary } from './models/response-ienumerable-tarifa-summary';
 export { TarifaSummary } from './models/tarifa-summary';
+export { ResponseDecimal } from './models/response-decimal';
 export { ResponseTarifaSummary } from './models/response-tarifa-summary';
 export { ResponseTaxistaSummary } from './models/response-taxista-summary';
 export { ResponseIEnumerableVeiculoTaxistaSummary } from './models/response-ienumerable-veiculo-taxista-summary';
@@ -63,8 +67,8 @@ export { VeiculoSummary } from './models/veiculo-summary';
 export { ResponseVeiculoSummary } from './models/response-veiculo-summary';
 export { ResponseIEnumerableMarcaVeiculo } from './models/response-ienumerable-marca-veiculo';
 export { MarcaVeiculo } from './models/marca-veiculo';
-export { ResponseInfoMarca } from './models/response-info-marca';
-export { InfoMarca } from './models/info-marca';
-export { AnoModelo } from './models/ano-modelo';
+export { ResponseIEnumerableModeloVeiculo } from './models/response-ienumerable-modelo-veiculo';
 export { ModeloVeiculo } from './models/modelo-veiculo';
+export { ResponseIEnumerableAnoVersao } from './models/response-ienumerable-ano-versao';
+export { AnoVersao } from './models/ano-versao';
 export { ResponseVeiculoTaxistaSummary } from './models/response-veiculo-taxista-summary';
