# src/api/to_de_taxi/models/ano-modelo.ts
@@ -1,5 +1,0 @@
-/* tslint:disable */
-export interface AnoModelo {
-  codigo?: string;
-  nome?: string;
-}
