# src/api/to_de_taxi/models/info-marca.ts
@@ -1,7 +1,0 @@
-/* tslint:disable */
-import { AnoModelo } from './ano-modelo';
-import { ModeloVeiculo } from './modelo-veiculo';
-export interface InfoMarca {
-  anos?: Array<AnoModelo>;
-  modelos?: Array<ModeloVeiculo>;
-}
