# src/api/to_de_taxi/services.ts
@@ -1,4 +1,5 @@
 export { CorridaService } from './services/corrida.service';
+export { CorVeiculoService } from './services/cor-veiculo.service';
 export { EnderecoService } from './services/endereco.service';
 export { FaixaDescontoService } from './services/faixa-desconto.service';
 export { FaixaDescontoTaxistaService } from './services/faixa-desconto-taxista.service';
